# Voxel-Game

./: CMakeLists.txt
include/: Camera.h  Chunk.h  ChunkBoundary.h  ChunkLoader.h  ChunkMesher.h  Mesh.h  TextureArray.h  VAO.h  VBO.h  compShader.h  shaderClass.h
include/glad/: CMakeLists.txt
include/glad/src/: glad.c
include/stb/: CMakeLists.txt
res/shaders/: default.frag  default.vert  light.vert  perlin.glsl  plane.frag  plane.vert  terrain.frag
src/: Camera.cpp  Chunk.cpp  ChunkBoundary.cpp  ChunkLoader.cpp  ChunkMesher.cpp  EBO.cpp  Mesh.cpp  TextureArray.cpp  VAO.cpp  VBO.cpp  compShader.cpp  main.cpp  shaderClass.cpp
